  
  + Features:
    * add retries schedule into reminder schedule

  + Bugs:
    * always show 'Download as CSV' and 'View in Fusion Table' when channel bind to fusion table call flow
    * update condition description in reminder schedule UI
    * re-generate resource guid to remove references to existing resources for import call flow

1.1.2 (2013-08-23 Kakada <kakada@instedd.org)
  + Bugs:
    * fix evaluate condition in reminder schedule to lookup project variables in project

1.1.1 (2013-08-22 Kakada <kakada@instedd.org)
  + Bugs:
    * fix apply condition in reminder schedule when project variable has same name in difference projects

1.1.0 (2013-08-15  Mann  <chanmann@instedd.org>)

  + Features:
    * SMS feature integration
    * Add multi-stage deployment
    * Optimize CSV download using raw sql query
    * Project call logs filtering by date (eg. "after:2013-08-01 before:2013-08-05")
    * Upgrade to Rails 3.2.14 - http://weblog.rubyonrails.org/2013/7/23/Rails-3-2-14-has-been-released/

  + Bugs:
    * Restrict and replace space( ), dash(-) to underscore for fusion table name
    * Auto increasement index of fusion table file name
    * fix validation domain in channel spec

1.0.0 (2013-07-23  Kakada Chheang  <kakada@instedd.org>)

  + Features:
    * Support multiple addresses of contact
    * Add Detect Language step
    * Add Callback step
    * Destroy contact do not delete contact when it has any addresses (API)
    
  + Bugs:
    * fix reminder schedule weekdays repeat