@@ -1,0 +1,8 @@
+%script{type: "text/html", id: "register_option_template"}
+  %div.div_left
+    = t('views.call_flows._register_option_template.label.number')
+  %div
+    %select.w11{'data-bind' => "value: content_kind, options: content_kinds(), optionsText: 'text', optionsValue: 'value'"}
+    %select.w10{'data-bind' => 'value: variable, visible: content_kind() == "variable", options: available_variables()'}
+    %select.w10{'data-bind' => 'value: step_id, visible: content_kind() == "step", options: available_steps(), optionsText: "name", optionsValue: "value"'}
+    %select.w10{'data-bind' => 'value: response, visible: content_kind() == "response", options: available_responses(), optionsText: "name", optionsValue: "value"'}
