@@ -393,8 +393,13 @@ en:
           confirmation: "Confirmation:"
           phone_book_type: "Phone book type"
           reminder_group: "Reminder group"
+          to: "To"
+          select: "--- Select ---"
         action:
           remove_this_step: "Remove this step"
+      _register_option_template:
+        label:
+          number: "Number"
       _deregister_step_template:
         label:
           messages: "Messages"
