@@ -390,8 +390,13 @@ kh:
           confirmation: "បញ្ជាក់៖"
           phone_book_type: "ប្រភេទសៀវភៅទូរស័ព្ទ"
           reminder_group: "ក្រុមនៃការរំលឹក"
+          to: "ទៅ"
+          select: "--- ជ្រើសរើស ---"
         action:
           remove_this_step: "លុប​ជំហាន​នេះ"
+      _register_option_template:
+        label:
+          number: "លេខ"
       _deregister_step_template:
         label:
           messages: "សារ"
